# cr2xt-chineseversion

./: CMakeLists.txt  README.md
crengine-ng/: .gitignore  .gitlab-ci.yml  .mailmap  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  README.md  lvrend_orig.cpp
crengine-ng/.ci/: clang-format-diff.py  run-style-check-diff.sh
crengine-ng/build_standalone/: CMakeCache.txt  Makefile  cmake_install.cmake
crengine-ng/build_standalone/crengine/: Makefile  cmake_install.cmake  crengine-ng-config-version.cmake  crengine-ng-config.cmake  crengine-ng-config.h  crengine-ng.pc
crengine-ng/build_standalone/crengine/crengine-ng.framework/: crengine-ng
crengine-ng/cmake/modules/: FindWebPAlt.cmake  project_checks.cmake
crengine-ng/crengine/: .clang-format  .gitignore  CMakeLists.txt  _clang_format.sh  crengine-ng-config.cmake.in  crengine-ng-config.h.cmake  crengine-ng.pc.cmake  crengine-ng.rc  rc-config.h.cmake
crengine-ng/crengine/Tools/: CMakeLists.txt
crengine-ng/crengine/Tools/Fb2Linux/: CMakeLists.txt  fb2v.cpp  xutils.cpp  xutils.h
crengine-ng/crengine/Tools/GammaGen/: gammagen.pl
crengine-ng/crengine/Tools/HyphConv/: mkpattern.pl  mkpattern_dic.pl
crengine-ng/crengine/Tools/HyphDumper/: CMakeLists.txt  main.cpp  my_hyphpatternreader.cpp  my_hyphpatternreader.h  my_texhyph.cpp  my_texhyph.h  my_texpattern.cpp  my_texpattern.h
crengine-ng/crengine/Tools/blend-algo-test/: CMakeLists.txt  blend_over_gray_test.c  blend_over_rgb_test.c
crengine-ng/crengine/Tools/gen_mathml/: gen_mathml_operators_h.py
crengine-ng/crengine/Tools/gentoo/: crengine-ng-x.y.z.ebuild
crengine-ng/crengine/Tools/getauthors/: collect_authors.pl  getauthors.sh
crengine-ng/crengine/Tools/glyphcache_bench/: CMakeLists.txt  lvfontglyphcache_a.cpp  lvfontglyphcache_a.h  lvfontglyphcache_b.cpp  lvfontglyphcache_b.h  main.cpp
crengine-ng/crengine/Tools/langstat/: CMakeLists.txt  langstat.cpp
crengine-ng/crengine/Tools/langstat2/: CMakeLists.txt  langstat.cpp
crengine-ng/crengine/Tools/qtc-debugger/: crengine-ng-dbg-helper-safe.py  crengine-ng-dbg-helper.py
crengine-ng/crengine/Tools/zip-test/: CMakeLists.txt  main.cpp
crengine-ng/crengine/data/css/: chm.css  epub.css  fb2.css  fb3.css  htm.css  markdown.css  rtf.css
crengine-ng/crengine/data/hyph/: hyph-ar.pattern  hyph-bg.pattern  hyph-bn.pattern  hyph-cs.pattern  hyph-da.pattern  hyph-de-1996.pattern  hyph-el-monoton.pattern  hyph-en-gb.pattern  hyph-en-us.pattern  hyph-es.pattern  hyph-fa.pattern  hyph-fi.pattern  hyph-grc.pattern  hyph-gu.pattern  hyph-hu.pattern  hyph-it.pattern  hyph-mr.pattern  hyph-nl.pattern  hyph-pa.pattern  hyph-pl.pattern  hyph-pt.pattern  hyph-ru-ru,en-us.pattern  hyph-ru-ru.pattern  hyph-ta.pattern  hyph-te.pattern  hyph-uk.pattern  (+1 more)
crengine-ng/crengine/docs/: XthSample.html  xtc.ksy  xtg.ksy  xth.ksy
crengine-ng/crengine/doxygen/: Doxyfile
crengine-ng/crengine/include/: crbookformats.h  crconcurrent.h  crengine.h  crgui.h  crhist.h  crhyphman.h  cri18n.h  crlocaledata.h  crlocks.h  crlog.h  crprops.h  crsetup.h  crskin.h  crtimerutil.h  crtrace.h  crtxtenc.h  cssdef.h  dtddef.h  fb2def.h  ldomdoccache.h  ldomdocument.h  ldommarkedrange.h  ldomnode.h  ldomnodecallback.h  ldomword.h  ldomwordex.h  ldomwordexlist.h  ldomxpointer.h  ldomxpointerex.h  ldomxrange.h  ldomxrangelist.h  lvarray.h  lvassetcontainerfactory.h  lvautoptr.h  lvbasedrawbuf.h  lvbyteorder.h  lvcacheableobject.h  lvcacheloadingcallback.h  lvcolordrawbuf.h  lvcontainer.h  (+44 more)
crengine-ng/crengine/src/: chmfmt.cpp  chmfmt.h  cp_stats.cpp  cp_stats.h  crbookformats.cpp  crconcurrent.cpp  crgui.cpp  crhist.cpp  crhyphman.cpp  cri18n.cpp  crlog.cpp  crprops.cpp  crskin.cpp  crtxtenc.cpp  docxdtd.inc  docxfmt.cpp  docxfmt.h  epubfmt.cpp  epubfmt.h  fb3fmt.cpp  fb3fmt.h  lvdocview.cpp  lvmemman.cpp  lvnavigationhistory.h  lvopc.cpp  lvopc.h  lvpagesplitter.cpp  lvrend.cpp  lvserialbuf.cpp  lvstring.cpp  lvstring32collection.cpp  lvstring32hashedcollection.cpp  lvstring8collection.cpp  lvstsheet.cpp  lvstyles.cpp  lvtextfm.cpp  mathml.cpp  mathml.h  mathml_css_h.css  mathml_operators.h  (+22 more)
crengine-ng/crengine/tests/: CMakeLists.txt  README.txt  calc-drawbuf-diff.cpp  calc-drawbuf-diff.h  compare-two-binfiles.cpp  compare-two-binfiles.h  compare-two-textfiles.cpp  compare-two-textfiles.h  crengine-ng-environment.cpp  make-rand-file.cpp  make-rand-file.h  savetobmp.cpp  savetobmp.h  tests_blockwritecache.cpp  tests_bm_title.cpp  tests_book_cover.cpp  tests_doc_props.cpp  tests_doc_with_base64_img.cpp  tests_docparse.cpp  tests_docview_funcs.cpp  tests_fontman_funcs.cpp  tests_formatting.cpp  tests_hyph.cpp  tests_localenames.cpp  tests_props.cpp  tests_streamutils.cpp  tests_string_funcs.cpp  tests_textrender.cpp  tests_tinydom.cpp  tests_zip-use.cpp
crqt-ng/: .clang-format  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  README.md  _clang_format.sh  config.h.cmake
crqt-ng/.ci/: README.md  run-style-check-diff.sh
crqt-ng/cmake/modules/: Qt5TranslationToolsMacros.cmake  Qt6TranslationToolsMacros.cmake
crqt-ng/src/: CMakeLists.txt  aboutdlg.cpp  aboutdlg.h  aboutdlg.ui  addbookmarkdlg.cpp  addbookmarkdlg.h  app-props.h  bookmarklistdlg.cpp  bookmarklistdlg.h  cr3widget.cpp  cr3widget.h  cr3widget_commands.h  crqt.rc  crqtres.qrc  crqtutil.cpp  crqtutil.h  exportprogressdlg.cpp  exportprogressdlg.h  exportprogressdlg.ui  fallbackfontsdialog.cpp  fallbackfontsdialog.h  filepropsdlg.cpp  filepropsdlg.h  fontfamiliesdialog.cpp  fontfamiliesdialog.h  fontfamiliesdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  previewwidget.cpp  previewwidget.h  recentdlg.cpp  recentdlg.h  sampleview.cpp  sampleview.h  searchdlg.cpp  searchdlg.h  settings.cpp  settings.h  (+15 more)
crqt-ng/src/desktop/: Info.plist.cmake  crqt.appdata.xml  crqt.desktop  crqt.icns  crqt.xpm
crqt-ng/src/i18n/: crqt_bg.ts  crqt_cs.ts  crqt_hu.ts  crqt_nl.ts  crqt_ru.ts  crqt_uk.ts
crqt-ng/tools/genchangelog/: genchangelog.sh
crqt-ng/tools/gentoo/: crqt-ng-x.y.z.ebuild
crqt-ng/tools/getauthors/: collect_authors.pl  getauthors.sh
(+247 files in other folders)
